--- a/package.json
+++ b/package.json
@@ -1,52 +1,37 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "ikon-awards",
+  "version": "1.0.0",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.25.0",
-    "gatsby-image": "^2.4.9",
-    "gatsby-plugin-google-gtag": "^2.8.0",
-    "gatsby-plugin-layout": "^1.3.6",
-    "gatsby-plugin-manifest": "^2.4.14",
-    "gatsby-plugin-offline": "^3.2.13",
-    "gatsby-plugin-react-helmet": "^3.3.6",
-    "gatsby-plugin-sharp": "^2.6.14",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-styled-components": "^3.3.6",
-    "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-source-prismic": "^3.3.4",
-    "gatsby-transformer-sharp": "^2.5.7",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0",
-    "react-intersection-observer": "^8.26.2",
-    "styled-components": "^5.1.1"
-  },
-  "devDependencies": {
-    "prettier": "2.0.5"
-  },
+  "description": "ikon-awards",
+  "author": "Arthur Nakkaka",
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "clean": "gatsby clean"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "dependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
+    "gatsby": "^4.24.0",
+    "gatsby-plugin-google-gtag": "^4.24.0",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-layout": "^3.24.0",
+    "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-react-helmet": "^5.24.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-sitemap": "^5.24.0",
+    "gatsby-plugin-styled-components": "^5.24.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-source-prismic": "^5.2.10",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.4.0",
+    "styled-components": "^5.3.6"
   }
 }
